-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2012 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

1/10/12
    - Moved the building of Ybus outside the reactive limit
      enforcement loop in runpf(). Suggested by Shiyang Li.

1/4/12
    - Running a power flow for a case with DC lines but no gencost
      no longer causes an error.


Changes since 4.0
-----------------

12/14/11
    - Released version 4.1.
    - Fixed bug in check for ENFORCE_Q_LIMS with multiple slacks
      in runpf().
    - Moved printing of power flow solver name into runpf() so it
      doesn't get repeated when ENFORCE_Q_LIMS is on.

12/9/11
    - Fixed problem with qps_cplex() when H matrix is not
      perfectly numerically symmetric.

12/8/11
    - Added basic DC line modeling capability. See help for
      toggle_dcline() for details.
      
12/1/11
    - Removed deprecated functions in @opf_model, gen_lin_N(),
      get_nln_N(), get_var_N(), use getN() instead.
    - Removed all references to deprecated option OUT_RAW.

11/15/11
    - Fixed a crashing bug in computation of quadratic user-defined
      costs. Thanks to Stefanos Delikaraoglou.

11/11/11
    - Changed default DC OPF/LP/QP solver precedence in 
      dcopf_solver() and qps_matpower() to the following:
      CPLEX, MOSEK, Gurobi, BPMPD, Opt Tbx, MIPS.
    - Minor enhancements to cdf2matp(), including saving of bus
      names. Thanks to Alvaro Jaramillo Duque.

11/09/11
    - Refactored ext2int() and int2ext() into additional functions
      e2i_field(), e2i_data(), i2e_field() and i2e_data() to
      clean things up and prepare for the ability to automatically
      re-order data in cell arrays.

10/31/11
    - Added three case files, all more recent variations of the