@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+1/16/12
+    - Added new function gurobiver() for retreiving/printing Gurobi
+      and Gurobi_MEX version information, since it is used multiple
+      places.
+
 1/10/12
     - Moved the building of Ybus outside the reactive limit
       enforcement loop in runpf(). Suggested by Shiyang Li.
